<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
          
    <EditText
		android:id="@+id/edt_name"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:layout_marginBottom="10dp"
		android:hint="@string/str_name"
		android:inputType="textPersonName">"
	</EditText>
	
    <EditText
		android:id="@+id/edt_age"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:layout_marginBottom="10dp"
		android:hint="@string/str_age"
		android:inputType="numberDecimal">"
	</EditText>
	
    <EditText
		android:id="@+id/edt_address"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:layout_marginBottom="10dp"
		android:hint="@string/str_address"
		android:inputType="text" >
	</EditText>

</LinearLayout>
